--- a/meatup/templates/base.html
+++ b/meatup/templates/base.html
@@ -23,7 +23,7 @@
         <a class="py-2 d-none d-md-inline-block" href="/signup">Sign Up</a>
       {% endif %}
 
-      <a class="py-2 d-none d-md-inline-block" href="{% url 'aboutus' %}">About Us</a>
+      <a class="py-2 d-none d-md-inline-block" href="{% url 'aboutus' %}">About Me</a>
     </div>
   </nav>
 
